# website

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.prod  Makefile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATES/: bug.yaml  feature_request.yaml
.github/workflows/: ci.yml
distelbot/: apps.py  urls.py  views.py
docker/: Dockerfile.prod  docker_login.sh  start_dev.sh  start_prod.sh
docs/: deployment.md  gocardless.md
hsf/: dev_settings.py.example  local_settings.py.example  settings.py  test_settings.py  urls.py  wsgi.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20170406_1546.py  0002_auto_20170412_1949.py  0002_auto_20170413_2350.py  0003_auto_20170406_1602.py  0003_user_space.py  0004_auto_20170414_1016.py  0005_auto_20170415_1930.py  0006_remove_space_longname.py  0007_space_email.py  0008_auto_20170415_2319.py  0009_auto_20170415_2320.py  0010_remove_space_classification.py  0011_auto_20170415_2327.py  0012_auto_20170415_2328.py  0013_auto_20170415_2330.py  0014_auto_20170418_2108.py  0014_auto_20170418_2152.py  0015_user_space_request_key.py  0016_auto_20170421_1159.py  0016_merge_20170421_2343.py  0017_auto_20170421_1344.py  0018_auto_20170421_1356.py  0019_auto_20170421_1426.py  0020_auto_20170421_1427.py  0021_user_member_statement.py  0022_merge_20170422_2225.py  0023_user_active.py  0024_gocardlesspayment.py  0025_auto_20170423_2217.py  0026_auto_20170423_2232.py  (+17 more)
static/: data.json
trademarks/: apps.py  models.py
(+63 files in other folders)
